--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,27 +126,27 @@ h3#currentQuestionNumberText {
     color: #1a1a1a;
 }
 
-button#btn-test {
+button.btn-test, a.btn-refresh {
     float: right;
     padding: 10px;
     margin: 0;
     border-radius: 20px; 
 }
 
-a#btn-refresh {
+a.btn-refresh {
     display: none; 
-    float: right; 
-    padding: 10px;
-    margin: 0;
-    border-radius: 20px; 
 }
 
-span#timer {
+a#restart-test {
+    color: #fff;
+}
+
+li.timer {
     display: none; 
-    margin-right: 30px;
+    margin: 13px 10px 0px 0px;
     font-family: Western, cursive;
     font-weight: bold;
-    color: #1a1a1a;
+    color: #fff;
 }
 
 h3#title-quiz {
@@ -167,6 +167,14 @@ h3#title-quiz {
 
 div#score {
     margin-left: 36px;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 20px;
+    font-family: Rotoco;
+}
+
+span.alert-link {
+    display: block;
 }
 
 ol.questions {
@@ -178,30 +186,17 @@ ol > li.title-question {
     border-radius: 10px;    
 }
 
-button#btn_submit, button#btn-refresh {
+button.btn-submit {
     display: none;
-    margin-right: 30px; 
-}
-
-span#created_at {
-    position: absolute; 
-    font-weight: bold; 
-    color: #bfb6b5; 
-    bottom: 8px;
-    right: 8px;
+    border-radius: 20px;
+    margin-bottom: 25px;
+    padding: 9px 15px;
 }
 
 div a#btn-menu {
     float: left; 
     padding: 7px 15px;
     margin-left: 52px;
-}
-
-div#topic_id {
-    width: 250px;
-    height: 110px; 
-    padding: 10px 19px 0px 19px;
-    margin: 0px 6px 15px 8px;
 }
 
 ul.answer {
@@ -218,10 +213,65 @@ span.question {
     display: inline-block; 
 }
 
-input.answers {
-    /*display: none;*/
+span.answers {
+    margin: 4px 5px 0px 5px; 
+    display: block; 
 }
 
-label.labels {
-    display: block;
+ul.nav.navbar-nav.test {
+    right: 126px; 
+    position: absolute; 
+    margin: 10px 20px 0px 0px;
+}
+
+/* checkbox */
+input[type="checkbox"] {
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: 0;
+    background: #ffffff;
+    height: 16px;
+    width: 16px;
+    border: 1px solid #BBBBBB;
+    outline: none;
+}
+
+input[type="checkbox"]:checked {
+    background: #007aff;
+    outline: none;
+}
+
+input[type="checkbox"]:after {
+    content: '';
+    position: relative;
+    color: #ffffff;
+    outline: none;
+}
+
+input[type="checkbox"]:checked:after {
+    content: "✓";
+    font-size: 14px;
+    top: -4px;
+    left: 3px;
+}
+
+label.form-check-label {
+    margin-bottom: 8px;
+    padding-left: 20px !important;
+    font-weight: 200;
+}
+
+input.form-check-input {
+    display: none;
+    width: 20px !important;
+    height: 20px !important;
+    border-radius: 4px;
+    margin-right: 10px !important;
+}
+
+img.avatar {
+    height: 25px;
+    border-radius: 50% 50%;
 }
